starrocks/kubernetes/operator/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starrocks
  labels:
    app.kubernetes.io/part-of: starrocks-production
